# PuzzleSolver

./: CIniFile.cpp  CIniFile.h  CMakeLists.txt  Layout.cpp  Layout.h  LayoutCacheImage.cpp  LayoutCacheImage.h  Makefile  Math.cpp  Math.h  PointOfEnvelope.cpp  PointOfEnvelope.h  Polygon.cpp  Polygon.h  Puzzle.pro  PuzzleList.cpp  PuzzleList.h  PuzzleOnBoard.cpp  PuzzleOnBoard.h  PuzzleOnBoardRepo.cpp  PuzzleOnBoardRepo.h  Segment.cpp  Segment.h  SegmentOfEnvelope.cpp  SegmentOfEnvelope.h  Solver.cpp  Solver.h  Vector.cpp  Vector.h  main.cpp  mainwindow.cpp  mainwindow.h  notepad.txt  point.cpp  point.h  puzzle.cpp  puzzle.h  test.cpp
